Fix scrollbar issue

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
 
 body {
     position: relative;
+    overflow: hidden;
     display: flex;
     height: 100%;
     margin: 0;
